@@ -1,5 +1,4 @@
 import shopify
-from ..base import ShopifyResource
 from six.moves import urllib
 import json
 
@@ -16,17 +15,11 @@ class GraphQL:
         return merged_headers
 
     def execute(self, query, variables=None, operation_name=None):
-        endpoint = self.endpoint
         default_headers = {"Accept": "application/json", "Content-Type": "application/json"}
         headers = self.merge_headers(default_headers, self.headers)
         data = {"query": query, "variables": variables, "operationName": operation_name}
 
         req = urllib.request.Request(self.endpoint, json.dumps(data).encode("utf-8"), headers)
 
-        try:
-            response = urllib.request.urlopen(req)
-            return response.read().decode("utf-8")
-        except urllib.error.HTTPError as e:
-            print((e.read()))
-            print("")
-            raise e
+        response = urllib.request.urlopen(req)
+        return response.read().decode("utf-8")
