@@ -1,4 +1,5 @@
 == Unreleased
+- Improve: Stop reading and printing an HTTPError message on a GraphQL error
 
 == Version 12.0.0
 - Update API version with 2022-04 release, remove API version 2021-07 ([#591](https://github.com/Shopify/shopify_python_api/pull/591))
